tests/tests/errors/30648-1.vb
'#compiler-message:30648-1.vb(8:18) : error BC30648: String constants must end with a double quote.
'#exit-code:1

Module Test

    Public Sub Main()

        Dim aa = """   
        
    End Sub
    
End Module